--- a/index.html
+++ b/index.html
@@ -7,116 +7,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Malla Curricular Interactiva</h1>
-
-  <div id="malla-container">
-    <!-- Aquí se cargarán los años y semestres -->
-  </div>
+  <h1>Malla Curricular</h1>
+  <div id="malla-container"></div>
 
   <script src="script.js"></script>
-  <script>
-    // Al cargar la página, armamos la malla dividida por años y semestres
-
-    const mallaContainer = document.getElementById("malla-container");
-
-    // Agrupamos ramos por año y semestre (usando la propiedad semestre del objeto)
-    const anos = {
-      1: { nombre: "Primer Año", semestres: { I: [], II: [] } },
-      2: { nombre: "Segundo Año", semestres: { III: [], IV: [] } },
-      3: { nombre: "Tercer Año", semestres: { V: [], VI: [] } },
-      4: { nombre: "Cuarto Año", semestres: { VII: [], VIII: [] } },
-      5: { nombre: "Quinto Año", semestres: { IX: [], X: [] } }
-    };
-
-    // Distribuir ramos en esa estructura
-    ramos.forEach(ramo => {
-      for (let ano in anos) {
-        if (Object.keys(anos[ano].semestres).includes(ramo.semestre)) {
-          anos[ano].semestres[ramo.semestre].push(ramo);
-        }
-      }
-    });
-
-    // Crear HTML dinámico
-    for (const anoKey in anos) {
-      const ano = anos[anoKey];
-
-      const anoDiv = document.createElement("div");
-      anoDiv.classList.add("ano");
-
-      const anoTitulo = document.createElement("h2");
-      anoTitulo.textContent = ano.nombre;
-      anoDiv.appendChild(anoTitulo);
-
-      for (const semestreKey in ano.semestres) {
-        const semDiv = document.createElement("div");
-        semDiv.classList.add("semestre");
-
-        const semTitulo = document.createElement("h3");
-        semTitulo.textContent = `Semestre ${semestreKey}`;
-        semDiv.appendChild(semTitulo);
-
-        const malla = document.createElement("div");
-        malla.classList.add("malla");
-        malla.id = `malla-${anoKey}-${semestreKey}`;
-
-        ano.semestres[semestreKey].forEach(ramo => {
-          const div = document.createElement("div");
-          div.classList.add("ramo");
-          div.textContent = ramo.nombre;
-          div.dataset.nombre = ramo.nombre;
-          // Bloqueado si tiene requisitos
-          if (ramo.requisitos.length > 0) div.classList.add("bloqueado");
-          malla.appendChild(div);
-        });
-
-        semDiv.appendChild(malla);
-        anoDiv.appendChild(semDiv);
-      }
-
-      mallaContainer.appendChild(anoDiv);
-    }
-
-    // Evento para aprobar ramos y desbloquear los siguientes
-    mallaContainer.addEventListener("click", e => {
-      if (!e.target.classList.contains("ramo") || e.target.classList.contains("bloqueado")) return;
-
-      e.target.classList.toggle("aprobado");
-
-      const nombre = e.target.dataset.nombre;
-      const ramoActual = ramos.find(r => r.nombre === nombre);
-      if (!ramoActual) return;
-
-      // Si se aprobó, desbloquear los que dependen
-      if (e.target.classList.contains("aprobado")) {
-        ramoActual.abre.forEach(nombreDesbloqueado => {
-          const desbloqueado = document.querySelector(`[data-nombre='${nombreDesbloqueado}']`);
-          if (desbloqueado) {
-            const ramoObj = ramos.find(r => r.nombre === nombreDesbloqueado);
-            if (ramoObj) {
-              ramoObj.requisitos = ramoObj.requisitos.filter(r => r !== nombre);
-              if (ramoObj.requisitos.length === 0) desbloqueado.classList.remove("bloqueado");
-            }
-          }
-        });
-      } else {
-        // Si se desaprueba, bloquear de nuevo los que dependen
-        ramoActual.abre.forEach(nombreBloqueado => {
-          const bloqueado = document.querySelector(`[data-nombre='${nombreBloqueado}']`);
-          if (bloqueado) {
-            const ramoObj = ramos.find(r => r.nombre === nombreBloqueado);
-            if (ramoObj) {
-              if (!ramoObj.requisitos.includes(nombre)) {
-                ramoObj.requisitos.push(nombre);
-              }
-              bloqueado.classList.add("bloqueado");
-              // También desaprueba el ramo desbloqueado automáticamente
-              bloqueado.classList.remove("aprobado");
-            }
-          }
-        });
-      }
-    });
-  </script>
 </body>
 </html>
